Improved API responses